# docs/swagger.json
@@ -24,6 +24,67 @@
                 }
             }
         },
+        "/auth/login": {
+            "post": {
+                "description": "Login using either email, or both and password",
+                "consumes": [
+                    "appplication/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Login",
+                "parameters": [
+                    {
+                        "description": "user",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.handleAuthLogin.request"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "headers": {
+                            "Set-Cookie": {
+                                "type": "string",
+                                "description": "access_token=12345 refresh_token=12345"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/main.errorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/main.errorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/main.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/main.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/logout": {
             "get": {
                 "description": "Logout user",
@@ -381,12 +442,6 @@
                             "$ref": "#/definitions/main.errorResponse"
                         }
                     },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/main.errorResponse"
-                        }
-                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -401,6 +456,54 @@
                     },
                     "413": {
                         "description": "Request Entity Too Large",
+                        "schema": {
+                            "$ref": "#/definitions/main.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/main.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/books/recents": {
+            "get": {
+                "description": "Get recent books",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "books"
+                ],
+                "summary": "Get recent books",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "offset",
+                        "name": "offset",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "limit",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.handleGetRecentBooks.response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/main.errorResponse"
                         }
@@ -496,13 +599,13 @@
                 "approved": {
                     "type": "boolean"
                 },
-                "chapter_count": {
+                "chapterCount": {
                     "type": "integer"
                 },
                 "completed": {
                     "type": "boolean"
                 },
-                "created_at": {
+                "createdAt": {
                     "type": "string"
                 },
                 "description": {
@@ -526,13 +629,13 @@
                 "rating": {
                     "type": "number"
                 },
-                "release_schedule": {
+                "releaseSchedule": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/main.responseReleaseSchedule"
                     }
                 },
-                "updated_at": {
+                "updatedAt": {
                     "type": "string"
                 },
                 "views": {
@@ -551,7 +654,7 @@
         "main.getResponseBook": {
             "type": "object",
             "properties": {
-                "chapter_count": {
+                "chapterCount": {
                     "type": "integer"
                 },
                 "description": {
@@ -572,7 +675,7 @@
                 "rating": {
                     "type": "number"
                 },
-                "release_schedule": {
+                "releaseSchedule": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/main.responseReleaseSchedule"
@@ -580,6 +683,21 @@
                 },
                 "views": {
                     "type": "integer"
+                }
+            }
+        },
+        "main.handleAuthLogin.request": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
                 }
             }
         },
@@ -657,6 +775,34 @@
                     "items": {
                         "type": "string"
                     }
+                }
+            }
+        },
+        "main.handleGetRecentBooks.response": {
+            "type": "object",
+            "properties": {
+                "books": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/main.handleGetRecentBooks.responseBooks"
+                    }
+                }
+            }
+        },
+        "main.handleGetRecentBooks.responseBooks": {
+            "type": "object",
+            "properties": {
+                "image": {
+                    "type": "string"
+                },
+                "lastReadChapter": {
+                    "type": "integer"
+                },
+                "lastReadTime": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         },
