# routes.go
@@ -29,7 +29,8 @@ func (s *server) routes() {
 	s.router.Post("/api/v1/books", authenticatedUser(s.handleUploadBook))
 	s.router.Get("/api/v1/books", s.handleGetBooks)
 	s.router.Get("/api/v1/books/stats", authenticatedUser(s.handleGetBooksStats))
-	s.router.Get("/api/v1/books/recents", nil)
+	s.router.Get("/api/v1/books/recents", authenticatedUser(s.handleGetRecentBooks))
+	s.router.Get("/api/v1/books/recently-uploaded", nil)
 
 	s.router.Get("/api/v1/books/{bookId}", nil)
 	s.router.Delete("/api/v1/books/{bookId}", nil)
